# grandata

./: .gitignore  README.md  pyproject.toml
crandata/: __init__.py  _genome.py  _module.py  _split.py  chrom_io.py  crandata.py  seq_io.py  tx_io.py
docs/: README.md
docs/guides/data-preparation/: rna-and-extra-modalities.md  single-and-multi-species.md
docs/guides/loading/: prebuilt-grandata-zarr.md
grandata/: __init__.py  _bin_genome.py  _genome.py  _module.py  _split.py  chrom_io.py  grandata.py  seq_io.py  tx_io.py  utils.py
scripts/: ab_bigwig_ingest.py  bench_dataload.py  convert_grandata_zarr_to_ed.py
tests/: README.md  profile_output.prof  test_chrom_seq_io.py  test_concat.py  test_crandataloader.ipynb  test_grandata_fields.py  test_grandata_units.py  test_grandataloader.ipynb  test_integration.py  test_module_alignment.py  test_sampling.py  test_split.py  test_tx_io.py
