[tool.poetry]
name        = "grandata"
version     = "0.1.0"
description = "CREsted-style genome-track data management backed by XArray."
readme      = "README.md"
authors     = ["Matthew Schmitz"]
homepage    = "https://github.com/mtvector/grandata"
repository  = "https://github.com/mtvector/grandata"
license     = "MIT"
packages = [
  { include = "grandata" }
]

[[tool.poetry.source]]
name     = "pytorch-cpu" #maybe improve compatibility with other frameworks?
url      = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python     = ">=3.11,<4.0"
xarray     = "*"
xbatcher   = "*"
dask       = "*"
icechunk   = "*"
torch = { version = "^2.0.0", source = "pytorch-cpu" } #maybe improve compatibility with other frameworks?
torchdata  = ">=0.11.0"
zarr       = ">=3.0.0"
pybigtools = ">=0.2.4"
pandas     = "*"
numpy      = "*"
tqdm       = "*"
ete3       = "*"
pyfaidx    = "*"
pysam      = "*"
loguru     = "*"

[tool.poetry.group.dev.dependencies]
pytest     = "^7.0"
pyBigWig   = "*"

[build-system]
requires    = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
