[tool.poetry]
name        = "grandata"
version     = "0.1.0"
description = "CREsted-style genome-track data management backed by XArray."
readme      = "README.md"
authors     = ["Matthew Schmitz"]
license     = "MIT"
package-mode = true


[tool.poetry.dependencies]
python      = ">=3.11,<4.0"
xarray      = "*"
dask        = "*"
zarr        = ">=3.0.0"
pybigtools  = ">=0.2.4"
pandas      = "*"
numpy       = "*"
tqdm        = "*"
loguru      = "*"
pysam       = "*"
pyfaidx     = "*"
h5py        = "*"
sparse      = "*"
scipy       = "*"
torchdata   = ">=0.11"
torch       = { version = "^2.7", source = "pytorch-cpu", markers = "extra=='cpu' and extra!='cuda'" }


    [tool.poetry.group.cuda]
        optional = true

        [tool.poetry.group.cuda.dependencies]
            torch       = { version = "^2.7", source = "pytorch-cuda", markers = "extra=='cuda' and extra!='cpu'" }

[tool.poetry.extras]
    cpu  = ["torch"]
    cuda = ["torch"]

[[tool.poetry.source]]
    name     = "pytorch-cuda"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cu128"

[[tool.poetry.source]]
    name     = "pytorch-cpu"
    priority = "explicit"
    url      = "https://download.pytorch.org/whl/cpu"

[build-system]
requires      = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
